# gst-svtplayer

./: .gitignore  .project  AndroidManifest.xml  README
jni/: Android.mk  NOTE  gstsvtpsrc.c  gstsvtpsrc.h  jni.c  logging.c  logging.h  svtplayer.c  svtplayer.h
jni/glib-2.13.0/glib/: Android.mk  galloca.h
jni/glib-2.13.0/gmodule/: Android.mk
jni/glib-2.13.0/gthread/: Android.mk
jni/glib-2.26.1/: Android.mk
jni/glib-2.26.1/android/: config.h
jni/glib-2.26.1/glib/: Android.mk  galloca.h  gatomic.c  gconvert.c  gdatetime.c  gstrfuncs.c
jni/glib-2.26.1/gmodule/: Android.mk  gmodule-dl.c
jni/glib-2.26.1/gobject/: Android.mk
jni/gst-plugins-bad-0.10.20/: Android.mk  gst-plugins-bad.spec
jni/gst-plugins-base-0.10.31/: Android.mk
jni/gst-plugins-good-0.10.26/: Android.mk
jni/gst-rtsp-server/: Android.mk
jni/gstreamer-0.10.31/: Android.mk
jni/gstsvthelper/: .gitignore  AUTHORS  Android.mk  COPYING  Makefile  README  configure.ac
jni/gstsvthelper/src/: .gitignore  Android.mk  Makefile  Makefile.am  gstaacfilter.c  gstaacfilter.h  gsth264filter.c  gsth264filter.h  gstsvthelper.c  gstsvthelper.h  gstsvtpsrc.c  gstsvtpsrc.h  libgstsvthelper.la  libgstsvthelper_la-gstaacfilter.lo  libgstsvthelper_la-gsth264filter.lo  libgstsvthelper_la-gstsvthelper.lo
jni/gstsvthelper/src/.deps/: libgstsvthelper_la-gstaacfilter.Plo  libgstsvthelper_la-gsth264filter.Plo  libgstsvthelper_la-gstsvthelper.Plo
jni/gstsvthelper/src/.libs/: libgstsvthelper.exp  libgstsvthelper.la  libgstsvthelper.lai  libgstsvthelper.ver
res/values/: strings.xml
(+74 files in other folders)
