plugin_LTLIBRARIES = libgstsvthelper.la
libgstsvthelper_la_SOURCES = gstsvthelper.c gstaacfilter.c gsth264filter.c
libgstsvthelper_la_CFLAGS = $(GST_CFLAGS)
libgstsvthelper_la_LIBADD = $(GST_LIBS)
libgstsvthelper_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstsvthelper_la_LIBTOOLFLAGS = --tag=disable-static

noinst_HEADERS = gstsvthelper.h gstaacfilter.h gsth264filter.h
